--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,70 @@ body {
 .sidebar {
   width: 31%;
 }
+
+.login {
+  background-color: #fafafa;
+  border: 1px solid #e8e8e8;
+  padding: 15px 25px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login-title {
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #595959;
+}
+
+.login-input{
+  display: block;
+  background-color: #fff;
+  border: 1px solid #e8e8e8;
+  padding: 5px 15px;
+  margin-bottom: 15px;
+}
+.login-forget{
+  text-align: center;
+  font-size: 12px;
+  text-decoration: none;
+  color: #757575;
+  margin-bottom: 10px;
+  font-style: italic;
+}
+.login-signin{
+  background-color: #fa8c16;
+  border: none;
+  border-radius: 2px;
+  text-transform: uppercase;
+  cursor: pointer;
+  line-height: 32px;
+  font-size: 12px;
+  color: #fff;
+  margin-bottom: 15px;
+}
+
+.login-signin:hover{
+  filter: opacity(80%);
+}
+.login-signin:active{
+  filter: brightness(85%);
+}
+.login-signup{
+  color: #fa8c16;
+  text-align: center;
+  font-size: 12px;
+  text-transform: uppercase;
+  text-decoration: none;
+  line-height: 18px;
+  margin-bottom: 10px;
+}
 .user {
   background-color: #fafafa;
   border: 1px solid #e8e8e8;
@@ -219,6 +283,7 @@ body {
   fill: #000;
 }
 .sidebar-nav {
+  display: none;
   background-color: #fff;
 }
 .sidebar-menu {
@@ -272,7 +337,7 @@ body {
   fill: #ffc53d;
 }
 .button-new-post {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   width: 100%;
