--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,10 @@ body {
 }
 .posts {
   width: 67%;
+  display: none;
+}
+.posts.visible{
+  display: block;
 }
 .post {
   background-color: #fff;
@@ -121,14 +125,19 @@ body {
   font-size: 14px;
   line-height: 22px;
 }
+
 .tags {
   margin-bottom: 22px;
+  color: #bfbfbf;
+}
+.tag:first-child{
+  margin-left: 0;
 }
 .tag {
   color: #bfbfbf;
   font-size: 14px;
   line-height: 22px;
-  margin-right: 10px;
+  margin-left: 10px;
   text-decoration: none;
 }
 .post-footer {
@@ -390,8 +399,12 @@ body {
   display: none;
   align-items: center;
   justify-content: center;
+  text-align: center;
   width: 100%;
   margin-top: 20px;
+}
+.button-new-post.visible{
+  display: block;
 }
 .icon-fire {
   fill: #fff;
@@ -460,15 +473,20 @@ body {
   color: #ffffff;
 }
 .add-post {
-  display: flex;
+  display: none;
+  width: 67%;
   flex-direction: column;
 }
+.add-post.visible{
+  display: flex;
+}
 .add-title,
-.add-text {
+.add-text,.add-tags {
   background: #ffffff;
   border: 1px solid #e8e8e8;
   padding: 23px 30px;
   margin-bottom: 16px;
+  resize: none;
 }
 .add-text {
   min-height: 362px;
